# nubis

./: Cargo.toml  README.md
.github/workflows/: docs.yml  release.yml
crates/nubis-core/src/: geostatistics.rs  lib.rs
crates/nubis-core/tests/: nubis_tests.rs
