[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/TileTopia-HQ/nubis"
authors = ["TileTopia <tiletopia@proton.me>"]
description = "Point cloud processing, filtering, and classification"
rust-version = "1.85"

[workspace.dependencies]
nubis-core = { path = "crates/nubis-core" }
